2005-08-14  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/xutil.c (real_plog, xsnprintf): call new xvsnprintf()
	wrapper function.
	(xvsnprintf): new function which already gets a va_list.  This was
	needed to avoid nesting va_list's (which apparently isn't
	allowed).

	* include/am_utils.h: prototype for new xvsnprintf wrapper.

	* configure.in: sinclude([vers.m4]) version number file.

	* vers.m4: new file to separate version number out of
	configure.in, useful for nightly snapshot script to generate
	nightly version string.

	* Makefile.am (EXTRA_DIST_M4): include vers.m4 in distro.

2005-08-14  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/info_file.c: add key to sun_entry2amd()'s parameters

	* amd/info_hesiod.c: add key to sun_entry2amd()'s parameters

	* amd/info_ldap.c: add key to sun_entry2amd()'s parameters

	* amd/info_ndbm.c: add key to sun_entry2amd()'s parameters

	* amd/info_nis.c: add key to sun_entry2amd()'s parameters

	* amd/info_nisplus.c: add key to sun_entry2amd()'s parameters

	* amd/sun_map.c: New functions to support sun translation to amd.
	The function sun_entry2amd's parameters were expanded to include
	the key value.  sun_entry_2amd() now returns NULL on error.

	* amd/sun_map.h: Expand sun_entry2amd's parameters to include key
	value.

	* amd/sun_map_parse.y: Change how file system types are parsed out
	of the list of options for each entry.  The previous way was not
	working properly so now we just look for the 'fstype' keyword in
	each option.  If it exists we copy its key value.

2005-08-11  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/sun_map_parse.y: instead of using a custom FOO_alloc()
	function, use Amd's CALLOC(struct FOO) macro.

	* amd/sun_map.h: remove extern definitions to functions no longer
	needed.

	* amd/sun_map.c: removed superfluous *_alloc() functions, some of
	which caused conflicts with same-named symbols in the parser
	(since we rename 'yyalloc' to 'sun_map_alloc').
