@@ -1,5 +1,8 @@
 2005-08-14  Erez Zadok  <ezk@cs.sunysb.edu>
 
+	* amd/Makefile.am: separate sources common to amd and sun2amd into
+	a special, locally-built only, static library called libaminfo.a.
+
 	* libamu/xutil.c (real_plog, xsnprintf): call new xvsnprintf()
 	wrapper function.
 	(xvsnprintf): new function which already gets a va_list.  This was
